# hubspot-crawler

./: .gitignore  CLAUDE.md  HubSpot-Detection-Implementation-Guide-v1.2.md  README.md  REMAINING_FIXES_GUIDE.md  RESTART_GUIDE_v1.7.0.md  RESTART_v1.7.0.sh  STATUS.md  monitor_v1.7.0.py  pyproject.toml  requirements.txt  urls.txt
examples/: urls.txt
hubspot_crawler/: __init__.py  cli.py  crawler.py  detector.py
hubspot_crawler/patterns/: hubspot_patterns.json
hubspot_crawler/schemas/: hubspot_detection_result.schema.json  hubspot_evidence.schema.json  hubspot_network_event.schema.json
tests/: conftest.py  test_anti_blocking.py  test_block_detection.py  test_confidence_levels.py  test_crawler_integration.py  test_csv_output.py  test_detector_cms.py  test_detector_features.py  test_detector_forms.py  test_detector_tracking.py  test_excel_output.py  test_failure_handling.py  test_hubspot_detected_flag.py  test_metadata_extraction.py  test_preset_modes.py  test_progress_tracker.py  test_url_variations.py
